# daxx

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml
.github/workflows/: rust.yml
src/: main.rs
src/api/: daxx_response.rs  eth.rs  mod.rs  route.rs
src/modelz/: model.rs
