[package]
name = "daxx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
anyhow = "1.0.44"
dotenv = "0.15"
ethers = "2.0.4"
log = "0.4"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.12.0", features = ["full"] }

